check_output_7.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /home/abujulaybeeb/Documents/Drips 15/stellAIverse-contracts/contracts/prediction-market/Cargo.toml
workspace: /home/abujulaybeeb/Documents/Drips 15/stellAIverse-contracts/Cargo.toml
warning: /home/abujulaybeeb/Documents/Drips 15/stellAIverse-contracts/Cargo.toml: unused manifest key: build
help: build is a valid .cargo/config.toml key
    Checking governance v0.1.0 (/home/abujulaybeeb/Documents/Drips 15/stellAIverse-contracts/contracts/governance)
warning: unused import: `contracttype`
 --> contracts/governance/src/lib.rs:4:44
  |
4 |     contract, contracterror, contractimpl, contracttype, token, Address, Env, String, Symbol, Val, Vec,
  |                                            ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `RoleType`
  --> contracts/governance/src/lib.rs:15:31
   |
15 | use stellai_lib::rbac::{self, RoleType};
   |                               ^^^^^^^^

error[E0308]: mismatched types
    --> contracts/governance/src/lib.rs:1249:99
     |
1249 |             let before_value = Self::try_get_storage_value(&env, &env.current_contract_address(), storage_key);
     |                                ---------------------------                                        ^^^^^^^^^^^ expected `&Val`, found `Val`
     |                                |
     |                                arguments to this function are incorrect
     |
note: associated function defined here
    --> contracts/governance/src/lib.rs:1154:8
     |
1154 |     fn try_get_storage_value(env: &Env, target_contract: &Address, storage_key: &Val) -> Option<Val> {
     |        ^^^^^^^^^^^^^^^^^^^^^                                       -----------------
help: consider borrowing here
     |
1249 |             let before_value = Self::try_get_storage_value(&env, &env.current_contract_address(), &storage_key);
     |                                                                                                   +

error[E0308]: mismatched types
    --> contracts/governance/src/lib.rs:1263:51
     |
1263 |             args.push_back(String::from_str(&env, new_value).into());
     |                            ----------------       ^^^^^^^^^ expected `&str`, found `String`
     |                            |
     |                            arguments to this function are incorrect
     |
note: associated function defined here
    --> /home/abujulaybeeb/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-sdk-22.0.11/src/string.rs:236:12
     |
 236 |     pub fn from_str(env: &Env, s: &str) -> String {
     |            ^^^^^^^^

error[E0308]: mismatched types
    --> contracts/governance/src/lib.rs:1272:85
     |
1272 |             Self::validate_storage_integrity(&env, &env.current_contract_address(), storage_key);
     |             --------------------------------                                        ^^^^^^^^^^^ expected `&Val`, found `Val`
     |             |
     |             arguments to this function are incorrect
     |
note: associated function defined here
    --> contracts/governance/src/lib.rs:1162:8
     |
1162 |     fn validate_storage_integrity(env: &Env, target_contract: &Address, storage_key: &Val) {
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^                                       -----------------
help: consider borrowing here
     |
1272 |             Self::validate_storage_integrity(&env, &env.current_contract_address(), &storage_key);
     |                                                                                     +

error[E0308]: mismatched types
    --> contracts/governance/src/lib.rs:1298:60
     |
1298 |                 (Some(stored), Some(current)) => stored == current,
     |                                                  ------    ^^^^^^^ expected `Bytes`, found `Val`
     |                                                  |
     |                                                  expected because this is `soroban_sdk::Bytes`

error[E0599]: no method named `to_string` found for struct `soroban_sdk::String` in the current scope
    --> contracts/governance/src/lib.rs:1309:59
     |
1309 |         storage::get_parameter_rule(&env, &parameter_name.to_string())
     |                                                           ^^^^^^^^^ method not found in `soroban_sdk::String`
     |
    ::: /home/abujulaybeeb/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/string.rs:2882:8
     |
2882 |     fn to_string(&self) -> String;
     |        --------- the method is available for `soroban_sdk::String` here
     |
     = help: items from traits can only be used if the trait is in scope
help: trait `ToString` which provides `to_string` is implemented but not in scope; perhaps you want to import it
     |
   2 + use alloc::string::ToString;
     |

warning: variable does not need to be mutable
   --> contracts/governance/src/lib.rs:568:13
    |
568 |         let mut delegator_powers = Vec::new(env);
    |             ----^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> contracts/governance/src/lib.rs:569:13
    |
569 |         let mut total_delegated_power = 0u128;
    |             ----^^^^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `result`
    --> contracts/governance/src/lib.rs:1014:13
     |
1014 |         let result: Val = env.invoke_contract(
     |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_result`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `parameter_name`
    --> contracts/governance/src/lib.rs:1136:17
     |
1136 |             let parameter_name = target_args.get(1).unwrap();
     |                 ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_parameter_name`

warning: unused variable: `env`
    --> contracts/governance/src/lib.rs:1154:30
     |
1154 |     fn try_get_storage_value(env: &Env, target_contract: &Address, storage_key: &Val) -> Option<Val> {
     |                              ^^^ help: if this is intentional, prefix it with an underscore: `_env`

warning: unused variable: `target_contract`
    --> contracts/governance/src/lib.rs:1154:41
     |
1154 |     fn try_get_storage_value(env: &Env, target_contract: &Address, storage_key: &Val) -> Option<Val> {
     |                                         ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_target_contract`

warning: unused variable: `storage_key`
    --> contracts/governance/src/lib.rs:1154:68
     |
1154 |     fn try_get_storage_value(env: &Env, target_contract: &Address, storage_key: &Val) -> Option<Val> {
     |                                                                    ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_storage_key`

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
warning: `governance` (lib) generated 9 warnings
error: could not compile `governance` (lib) due to 5 previous errors; 9 warnings emitted
